Aplicação de tradução e estrutura dos novos modulos

--- a/src/assets/i18n/autenticacao/pt-br.json
+++ b/src/assets/i18n/autenticacao/pt-br.json
@@ -1,3 +1,15 @@
 {
-  "lembreDeMim": "Lembre-se de mim"
+  "lembreDeMim": "Lembre-se de mim",
+  "crieUma": "Crie uma",
+  "naoTemUmaConta": "Não tem uma conta?",
+  "senha": "Senha",
+  "email": "E-mail",
+  "entrar": "Entrar",
+  "ultimasAcoesDosUsuarios": "Últimas ações dos usuários",
+  "indicesDeVendas": "Indices de venda",
+  "relatorioAnualDeVendas": "Relatório Anual de Vendas",
+  "vendas": "Vendas",
+  "visaoGeralDasVendas": "Visão geral das vendas",
+  "funcionario": "Funcionário",
+  "codigo": "Código"
 }
