--- a/src/assets/i18n/autenticacao/en.json
+++ b/src/assets/i18n/autenticacao/en.json
@@ -1,3 +1,15 @@
 {
-  "lembreDeMim": "Remember me"
+  "lembreDeMim": "#",
+  "crieUma": "#",
+  "naoTemUmaConta": "#",
+  "senha": "#",
+  "email": "#",
+  "entrar": "#",
+  "ultimasAcoesDosUsuarios": "#",
+  "indicesDeVendas": "#",
+  "relatorioAnualDeVendas": "#",
+  "vendas": "#",
+  "visaoGeralDasVendas": "#",
+  "funcionario": "#",
+  "codigo": "#"
 }
