Módulo de inventário e atualização do sistema de tradução

--- a/src/assets/i18n/autenticacao/en.json
+++ b/src/assets/i18n/autenticacao/en.json
@@ -1,15 +1,83 @@
 {
-  "lembreDeMim": "#",
-  "crieUma": "#",
-  "naoTemUmaConta": "#",
-  "senha": "#",
-  "email": "#",
-  "entrar": "#",
-  "ultimasAcoesDosUsuarios": "#",
-  "indicesDeVendas": "#",
-  "relatorioAnualDeVendas": "#",
-  "vendas": "#",
-  "visaoGeralDasVendas": "#",
-  "funcionario": "#",
-  "codigo": "#"
+  "adicionarIngrediente": "Add Ingredient",
+  "adicionarReceita": "Add Recipe",
+  "alerta": "Alert",
+  "atualizadoEm": "Updated On",
+  "cancelado": "Canceled",
+  "clientes": "Customers",
+  "codigo": "Code",
+  "crieUma": "Create one",
+  "critico": "critical",
+  "dashboard": "Dashboard",
+  "data": "Date",
+  "descricao": "Description",
+  "detalhes": "Details",
+  "editar": "Edit",
+  "email": "Email",
+  "emPreparacao": "In Preparation",
+  "entrar": "Enter",
+  "entregue": "delivered",
+  "estoqueMaximo": "Maximum Inventory",
+  "estoqueMinimo": "Minimum stock",
+  "estoqueSeguranca": "Security Stock",
+  "funcionario": "employee",
+  "indicesDeVendas": "Sales Indices",
+  "ingredientes": "Ingredients",
+  "ingredientesLower": "ingredients",
+  "inventario": "Inventory",
+  "itens": "Items",
+  "kcal": "Kcal",
+  "lembreDeMim": "Remember Me",
+  "limpar": "Clear",
+  "listaClientes": "List of Clients",
+  "listaMesas": "Table List",
+  "listaPedidos": "Order List",
+  "livre": "Free",
+  "mesa": "Table",
+  "mesas": "Tables",
+  "nao": "No",
+  "naoIniciado": "Not Started",
+  "naoTemUmaConta": "Don't have an account?",
+  "nenhumaDescricaoDisponivel": "No Description Available",
+  "nome": "Name",
+  "novaReceita": "New Recipe",
+  "novidades": "News",
+  "novoIngrediente": "New Ingredient",
+  "ocupada": "Busy",
+  "ocupado": "Busy",
+  "ok": "Okay",
+  "pedido": "Order",
+  "pedidos": "Orders",
+  "peso": "Weight",
+  "porPagina": "per page",
+  "preparacao": "Preparation",
+  "preparacaoPedidos Preparation": "Order Preparation",
+  "qtd": "Qty",
+  "quantidade": "Quantity",
+  "quantidadeIngredientes": "Quantity of Ingredients",
+  "quantidadeItens": "Quantity of Items",
+  "receita": "Recipe",
+  "receitas": "Recipes",
+  "relatorioAnualDeVendas": "Annual Sales Report",
+  "relatorioPedidos": "Order Reports",
+  "relatorios": "Reports",
+  "remover": "Remove",
+  "salvarIngrediente": "Save Ingredient",
+  "salvarProduto": "Save Product",
+  "selecionararquivo": "Select File",
+  "senha": "Password",
+  "sim": "Yes",
+  "status": "Status",
+  "textoSeletorImagem": "Drag and drop your image here or click the button.",
+  "textoSeletorImagem2": "MAXIMUM SIZE 5Mb",
+  "ultimasAcoesDosUsuarios": "Last actions of users",
+  "unidadeMedida of Measure": "Unit of Measure",
+  "usuarioAtualizou": "UserUpdated",
+  "valor": "Value",
+  "valorTotal": "TotalValue",
+  "valorTotalIngredientes": "Total Ingredients Value",
+  "vendas": "Sales",
+  "visaoGeralDasVendas Overview": "Sales Overview",
+  "visualizarComoCards": "View As Cards",
+  "visualizarComoTabela": "View AsTable"
 }
