--- a/src/assets/i18n/autenticacao/pt-br.json
+++ b/src/assets/i18n/autenticacao/pt-br.json
@@ -1,67 +1,83 @@
 {
-  "lembreDeMim": "Lembre-se de mim",
-  "crieUma": "Crie uma",
-  "dashboard": "Dashboard",
-  "naoTemUmaConta": "Não tem uma conta?",
-  "senha": "Senha",
-  "email": "E-mail",
-  "entrar": "Entrar",
-  "ultimasAcoesDosUsuarios": "Últimas ações dos usuários",
-  "indicesDeVendas": "Indices de venda",
-  "relatorioAnualDeVendas": "Relatório Anual de Vendas",
-  "vendas": "Vendas",
-  "visaoGeralDasVendas": "Visão geral das vendas",
-  "funcionario": "Funcionário",
-  "codigo": "Código",
-  "pedidos": "Pedidos",
-  "preparacao": "Preparação",
-  "relatorios": "Relatórios",
-  "clientes": "Clientes",
-  "listaPedidos": "Lista de Pedidos",
-  "preparacaoPedidos": "Preparação de Pedidos",
-  "relatorioPedidos": "Relatórios de Pedidos",
-  "listaClientes": "Lista de Clientes",
-  "pedido": "Pedido",
-  "qtd": "Qtd",
-  "itens": "Itens",
-  "entregue": "Entregue",
-  "emPreparacao": "Em Preparação",
-  "naoIniciado": "Não Iniciado",
+  "adicionarIngrediente": "Adicionar Ingrediente",
+  "adicionarReceita": "Adicionar Receita",
+  "alerta": "Alerta",
+  "atualizadoEm": "Atualizado Em",
   "cancelado": "Cancelado",
-  "detalhes": "Detalhes",
-  "novidades": "Novidades",
-  "receitas": "Receitas",
-  "ingredientes": "Ingredientes",
-  "inventario": "Inventário",
-  "estoqueSeguranca": "Estoque de Segurança",
-  "remover": "Remover",
-  "editar": "Editar",
-  "ingredientesLower": "ingredientes",
-  "nome": "Nome",
-  "peso": "Peso",
-  "kcal": "Kcal",
+  "clientes": "Clientes",
+  "codigo": "Código",
+  "crieUma": "Crie uma",
+  "critico": "Crítico",
+  "dashboard": "Dashboard",
+  "data": "Data",
   "descricao": "Descrição",
-  "valor": "Valor",
-  "unidadeMedida": "Unidade de Medida",
+  "detalhes": "Detalhes",
+  "editar": "Editar",
+  "email": "E-mail",
+  "emPreparacao": "Em Preparação",
+  "entrar": "Entrar",
+  "entregue": "Entregue",
+  "estoqueMaximo": "Estoque Máximo",
+  "estoqueMinimo": "Estoque Mínimo",
+  "estoqueSeguranca": "Estoque de Segurança",
+  "funcionario": "Funcionário",
+  "indicesDeVendas": "Indices de venda",
+  "ingredientes": "Ingredientes",
+  "ingredientesLower": "ingredientes",
+  "inventario": "Inventário",
+  "itens": "Itens",
+  "kcal": "Kcal",
+  "lembreDeMim": "Lembre-se de mim",
   "limpar": "Limpar",
+  "listaClientes": "Lista de Clientes",
+  "listaMesas": "Lista de Mesas",
+  "listaPedidos": "Lista de Pedidos",
+  "livre": "Livre",
+  "mesa": "Mesa",
+  "mesas": "Mesas",
+  "nao": "Não",
+  "naoIniciado": "Não Iniciado",
+  "naoTemUmaConta": "Não tem uma conta?",
+  "nenhumaDescricaoDisponivel": "Nenhuma Descrição Disponível",
+  "nome": "Nome",
+  "novaReceita": "Nova Receita",
+  "novidades": "Novidades",
+  "novoIngrediente": "Novo Ingrediente",
+  "ocupada": "Ocupada",
+  "ocupado": "Ocupado",
+  "ok": "Ok",
+  "pedido": "Pedido",
+  "pedidos": "Pedidos",
+  "peso": "Peso",
+  "porPagina": "por página",
+  "preparacao": "Preparação",
+  "preparacaoPedidos": "Preparação de Pedidos",
+  "qtd": "Qtd",
+  "quantidade": "Quantidade",
+  "quantidadeIngredientes": "Quantidade de Ingredientes",
+  "quantidadeItens": "Quantidade de Itens",
+  "receita": "Receita",
+  "receitas": "Receitas",
+  "relatorioAnualDeVendas": "Relatório Anual de Vendas",
+  "relatorioPedidos": "Relatórios de Pedidos",
+  "relatorios": "Relatórios",
+  "remover": "Remover",
+  "salvarIngrediente": "Salvar Ingrediente",
   "salvarProduto": "Salvar Produto",
   "selecionararquivo": "Selecionar Arquivo",
+  "senha": "Senha",
+  "sim": "Sim",
+  "status": "Status",
   "textoSeletorImagem": "Arraste e solte sua imagem aqui ou clique no botão.",
   "textoSeletorImagem2": "TAMANHO MÁXIMO 5Mb",
-  "novaReceita": "Nova Receita",
-  "adicionarReceita": "Adicionar Receita",
-  "adicionarIngrediente": "Adicionar Ingrediente",
+  "ultimasAcoesDosUsuarios": "Últimas ações dos usuários",
+  "unidadeMedida": "Unidade de Medida",
+  "usuarioAtualizou": "Usuario Atualizou",
+  "valor": "Valor",
+  "valorTotal": "Valor Total",
+  "valorTotalIngredientes": "Valor Total dos Ingredientes",
+  "vendas": "Vendas",
+  "visaoGeralDasVendas": "Visão geral das vendas",
   "visualizarComoCards": "Visualizar como cards",
-  "visualizarComoTabela": "Visualizar como tabela",
-  "porPagina": "por página",
-  "novoIngrediente": "Novo Ingrediente",
-  "salvarIngrediente": "Salvar Ingrediente",
-  "listaMesas": "Lista de Mesas",
-  "mesas": "Mesas",
-  "mesa": "Mesa",
-  "livre": "Livre",
-  "ocupado": "Ocupado",
-  "ocupada": "Ocupada",
-  "sim": "Sim",
-  "nao": "Não"
+  "visualizarComoTabela": "Visualizar como tabela"
 }
