Módulo de relatórios

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -6,6 +6,7 @@
   "cancelado": "Canceled",
   "clientes": "Customers",
   "codigo": "Code",
+  "comparacao": "Comparation",
   "crieUma": "Create one",
   "critico": "critical",
   "dashboard": "Dashboard",
@@ -20,8 +21,10 @@
   "estoqueMaximo": "Maximum Inventory",
   "estoqueMinimo": "Minimum stock",
   "estoqueSeguranca": "Security Stock",
+  "exportarParaExcel": "Export to Excel",
   "funcionario": "employee",
   "indicesDeVendas": "Sales Indices",
+  "ingrediente": "Ingredient",
   "ingredientes": "Ingredients",
   "ingredientesLower": "ingredients",
   "inventario": "Inventory",
@@ -48,6 +51,7 @@
   "ok": "Okay",
   "pedido": "Order",
   "pedidos": "Orders",
+  "periodo": "Period",
   "peso": "Weight",
   "porPagina": "per page",
   "preparacao": "Preparation",
@@ -56,6 +60,7 @@
   "quantidade": "Quantity",
   "quantidadeIngredientes": "Quantity of Ingredients",
   "quantidadeItens": "Quantity of Items",
+  "quantidadePedidos": "Quantity of Orders",
   "receita": "Recipe",
   "receitas": "Recipes",
   "relatorioAnualDeVendas": "Annual Sales Report",
