--- a/src/assets/i18n/pt-br.json
+++ b/src/assets/i18n/pt-br.json
@@ -6,6 +6,7 @@
   "cancelado": "Cancelado",
   "clientes": "Clientes",
   "codigo": "Código",
+  "comparacao": "Comparação",
   "crieUma": "Crie uma",
   "critico": "Crítico",
   "dashboard": "Dashboard",
@@ -20,8 +21,10 @@
   "estoqueMaximo": "Estoque Máximo",
   "estoqueMinimo": "Estoque Mínimo",
   "estoqueSeguranca": "Estoque de Segurança",
+  "exportarParaExcel": "Exportar para Excel",
   "funcionario": "Funcionário",
   "indicesDeVendas": "Indices de venda",
+  "ingrediente": "Ingrediente",
   "ingredientes": "Ingredientes",
   "ingredientesLower": "ingredientes",
   "inventario": "Inventário",
@@ -48,6 +51,7 @@
   "ok": "Ok",
   "pedido": "Pedido",
   "pedidos": "Pedidos",
+  "periodo": "Período",
   "peso": "Peso",
   "porPagina": "por página",
   "preparacao": "Preparação",
@@ -56,6 +60,7 @@
   "quantidade": "Quantidade",
   "quantidadeIngredientes": "Quantidade de Ingredientes",
   "quantidadeItens": "Quantidade de Itens",
+  "quantidadePedidos": "Quantidade de Pedidos",
   "receita": "Receita",
   "receitas": "Receitas",
   "relatorioAnualDeVendas": "Relatório Anual de Vendas",
@@ -72,7 +77,7 @@
   "textoSeletorImagem2": "TAMANHO MÁXIMO 5Mb",
   "ultimasAcoesDosUsuarios": "Últimas ações dos usuários",
   "unidadeMedida": "Unidade de Medida",
-  "usuarioAtualizou": "Usuario Atualizou",
+  "usuarioAtualizou": "Usuário Atualizou",
   "valor": "Valor",
   "valorTotal": "Valor Total",
   "valorTotalIngredientes": "Valor Total dos Ingredientes",
