Modal de confirmação

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,11 +1,13 @@
 {
   "adicionarIngrediente": "Add Ingredient",
+  "adicionarMesa": "Add Table",
   "adicionarReceita": "Add Recipe",
   "alerta": "Alert",
   "atualizadoEm": "Updated On",
   "cancelado": "Canceled",
   "clientes": "Customers",
   "codigo": "Code",
+  "confirmarAcaoTexto": "Are you sure you want to perform this action?",
   "comparacao": "Comparation",
   "crieUma": "Create one",
   "critico": "critical",
@@ -43,6 +45,7 @@
   "naoTemUmaConta": "Don't have an account?",
   "nenhumaDescricaoDisponivel": "No Description Available",
   "nome": "Name",
+  "novaMesa": "New Table",
   "novaReceita": "New Recipe",
   "novidades": "News",
   "novoIngrediente": "New Ingredient",
@@ -67,7 +70,11 @@
   "relatorioPedidos": "Order Reports",
   "relatorios": "Reports",
   "remover": "Remove",
+  "removerIngrediente": "Remove Ingredient",
+  "removerMesa": "Remove Table",
+  "removerReceita": "Remove Recipe",
   "salvarIngrediente": "Save Ingredient",
+  "salvarMesa": "Save Table",
   "salvarProduto": "Save Product",
   "selecionararquivo": "Select File",
   "senha": "Password",
