--- a/src/assets/i18n/pt-br.json
+++ b/src/assets/i18n/pt-br.json
@@ -1,11 +1,13 @@
 {
   "adicionarIngrediente": "Adicionar Ingrediente",
+  "adicionarMesa": "Adicionar Mesa",
   "adicionarReceita": "Adicionar Receita",
   "alerta": "Alerta",
   "atualizadoEm": "Atualizado Em",
   "cancelado": "Cancelado",
   "clientes": "Clientes",
   "codigo": "Código",
+  "confirmarAcaoTexto": "Você tem certeza que deseja realizar esta ação?",
   "comparacao": "Comparação",
   "crieUma": "Crie uma",
   "critico": "Crítico",
@@ -43,6 +45,7 @@
   "naoTemUmaConta": "Não tem uma conta?",
   "nenhumaDescricaoDisponivel": "Nenhuma Descrição Disponível",
   "nome": "Nome",
+  "novaMesa": "Nova Mesa",
   "novaReceita": "Nova Receita",
   "novidades": "Novidades",
   "novoIngrediente": "Novo Ingrediente",
@@ -67,7 +70,11 @@
   "relatorioPedidos": "Relatórios de Pedidos",
   "relatorios": "Relatórios",
   "remover": "Remover",
+  "removerIngrediente": "Remover Ingrediente",
+  "removerMesa": "Remover Mesa",
+  "removerReceita": "Remover Receita",
   "salvarIngrediente": "Salvar Ingrediente",
+  "salvarMesa": "Salvar Mesa",
   "salvarProduto": "Salvar Produto",
   "selecionararquivo": "Selecionar Arquivo",
   "senha": "Senha",
