Aplicar modal de confirmação nas páginas

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -71,6 +71,7 @@
   "relatorios": "Reports",
   "remover": "Remove",
   "removerIngrediente": "Remove Ingredient",
+  "removerItem": "Remove Item",
   "removerMesa": "Remove Table",
   "removerReceita": "Remove Recipe",
   "salvarIngrediente": "Save Ingredient",
