--- a/src/assets/i18n/pt-br.json
+++ b/src/assets/i18n/pt-br.json
@@ -71,6 +71,7 @@
   "relatorios": "Relatórios",
   "remover": "Remover",
   "removerIngrediente": "Remover Ingrediente",
+  "removerItem": "Remover Item",
   "removerMesa": "Remover Mesa",
   "removerReceita": "Remover Receita",
   "salvarIngrediente": "Salvar Ingrediente",
