Modal de nova receita

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -27,6 +27,7 @@
   "funcionario": "employee",
   "indicesDeVendas": "Sales Indices",
   "ingrediente": "Ingredient",
+  "ingredienteJaFoiSelecionado": "The ingredient has already been selected!",
   "ingredientes": "Ingredients",
   "ingredientesLower": "ingredients",
   "inventario": "Inventory",
