--- a/src/assets/i18n/pt-br.json
+++ b/src/assets/i18n/pt-br.json
@@ -45,6 +45,8 @@
   "naoIniciado": "Não Iniciado",
   "naoTemUmaConta": "Não tem uma conta?",
   "nenhumaDescricaoDisponivel": "Nenhuma Descrição Disponível",
+  "nenhumaReceitaEncontrada": "Nenhuma Receita foi encontrada!",
+  "nenhumIngredienteEncontrado": "Nenhuma Ingrediente foi encontrado!",
   "nome": "Nome",
   "novaMesa": "Nova Mesa",
   "novaReceita": "Nova Receita",
