--- a/src/assets/i18n/pt-br.json
+++ b/src/assets/i18n/pt-br.json
@@ -45,8 +45,10 @@
   "naoIniciado": "Não Iniciado",
   "naoTemUmaConta": "Não tem uma conta?",
   "nenhumaDescricaoDisponivel": "Nenhuma Descrição Disponível",
+  "nenhumaMesaEncontrada": "Nenhuma Mesa foi encontrada!",
+  "nenhumPedidoEncontrado": "Nenhum Pedido foi encontrado!",
   "nenhumaReceitaEncontrada": "Nenhuma Receita foi encontrada!",
-  "nenhumIngredienteEncontrado": "Nenhuma Ingrediente foi encontrado!",
+  "nenhumIngredienteEncontrado": "Nenhum Ingrediente foi encontrado!",
   "nome": "Nome",
   "novaMesa": "Nova Mesa",
   "novaReceita": "Nova Receita",
